--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".HomeActivity">
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".login_activity" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
-        <activity android:name=".LobbyActivity"></activity>
+
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".HomeActivity">
+
+        </activity>
+        <activity android:name=".LobbyActivity" />
     </application>
 
 </manifest>
