--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MessagingActivity"></activity>
-        <activity android:name=".HistoryActivity" />
+        <activity
+            android:name=".WelcomeActivity"
+            android:label="@string/title_activity_welcome"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".MessagingActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".login_activity">
             <intent-filter>
@@ -30,7 +33,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivity" />
         <activity android:name=".LobbyActivity" />
     </application>
 
